docs: update README with RestControllerAdvice and simplified Lombok note & refactor: improve ProductServiceImpl - null check for description, Stream.toList(), existsById for delete, rename repository field